# gen/go/proto/imp/api/core/core.pb.go
@@ -115,6 +115,108 @@ func (x *KeyStatus) GetStatus() string {
 	return ""
 }
 
+type NodeStatus struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Pubkey string `protobuf:"bytes,1,opt,name=pubkey,proto3" json:"pubkey,omitempty"`  // The pubkey of the node the status is meant for
+	Active bool   `protobuf:"varint,2,opt,name=active,proto3" json:"active,omitempty"` // The active status of this node.
+}
+
+func (x *NodeStatus) Reset() {
+	*x = NodeStatus{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_proto_imp_api_core_core_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *NodeStatus) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*NodeStatus) ProtoMessage() {}
+
+func (x *NodeStatus) ProtoReflect() protoreflect.Message {
+	mi := &file_proto_imp_api_core_core_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use NodeStatus.ProtoReflect.Descriptor instead.
+func (*NodeStatus) Descriptor() ([]byte, []int) {
+	return file_proto_imp_api_core_core_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *NodeStatus) GetPubkey() string {
+	if x != nil {
+		return x.Pubkey
+	}
+	return ""
+}
+
+func (x *NodeStatus) GetActive() bool {
+	if x != nil {
+		return x.Active
+	}
+	return false
+}
+
+type LightningStatus struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	NodeStatusList []*NodeStatus `protobuf:"bytes,1,rep,name=node_status_list,json=nodeStatusList,proto3" json:"node_status_list,omitempty"`
+}
+
+func (x *LightningStatus) Reset() {
+	*x = LightningStatus{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_proto_imp_api_core_core_proto_msgTypes[3]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *LightningStatus) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*LightningStatus) ProtoMessage() {}
+
+func (x *LightningStatus) ProtoReflect() protoreflect.Message {
+	mi := &file_proto_imp_api_core_core_proto_msgTypes[3]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use LightningStatus.ProtoReflect.Descriptor instead.
+func (*LightningStatus) Descriptor() ([]byte, []int) {
+	return file_proto_imp_api_core_core_proto_rawDescGZIP(), []int{3}
+}
+
+func (x *LightningStatus) GetNodeStatusList() []*NodeStatus {
+	if x != nil {
+		return x.NodeStatusList
+	}
+	return nil
+}
+
 //*
 // Represents a response back from a status request.
 type StatusResponse struct {
@@ -122,13 +224,14 @@ type StatusResponse struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	KeyStatus *KeyStatus `protobuf:"bytes,1,opt,name=key_status,json=keyStatus,proto3" json:"key_status,omitempty"` // KeyStatus information
+	KeyStatus       *KeyStatus       `protobuf:"bytes,1,opt,name=key_status,json=keyStatus,proto3" json:"key_status,omitempty"`                   // KeyStatus information
+	LightningStatus *LightningStatus `protobuf:"bytes,2,opt,name=lightning_status,json=lightningStatus,proto3" json:"lightning_status,omitempty"` // LightningStatus information
 }
 
 func (x *StatusResponse) Reset() {
 	*x = StatusResponse{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_proto_imp_api_core_core_proto_msgTypes[2]
+		mi := &file_proto_imp_api_core_core_proto_msgTypes[4]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -141,7 +244,7 @@ func (x *StatusResponse) String() string {
 func (*StatusResponse) ProtoMessage() {}
 
 func (x *StatusResponse) ProtoReflect() protoreflect.Message {
-	mi := &file_proto_imp_api_core_core_proto_msgTypes[2]
+	mi := &file_proto_imp_api_core_core_proto_msgTypes[4]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -154,12 +257,19 @@ func (x *StatusResponse) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use StatusResponse.ProtoReflect.Descriptor instead.
 func (*StatusResponse) Descriptor() ([]byte, []int) {
-	return file_proto_imp_api_core_core_proto_rawDescGZIP(), []int{2}
+	return file_proto_imp_api_core_core_proto_rawDescGZIP(), []int{4}
 }
 
 func (x *StatusResponse) GetKeyStatus() *KeyStatus {
 	if x != nil {
 		return x.KeyStatus
+	}
+	return nil
+}
+
+func (x *StatusResponse) GetLightningStatus() *LightningStatus {
+	if x != nil {
+		return x.LightningStatus
 	}
 	return nil
 }
@@ -177,11 +287,24 @@ var file_proto_imp_api_core_core_proto_rawDesc = []byte{
 	0x6f, 0x74, 0x6f, 0x22, 0x0f, 0x0a, 0x0d, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x65, 0x71,
 	0x75, 0x65, 0x73, 0x74, 0x22, 0x23, 0x0a, 0x09, 0x4b, 0x65, 0x79, 0x53, 0x74, 0x61, 0x74, 0x75,
 	0x73, 0x12, 0x16, 0x0a, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28,
-	0x09, 0x52, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x22, 0x40, 0x0a, 0x0e, 0x53, 0x74, 0x61,
-	0x74, 0x75, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x2e, 0x0a, 0x0a, 0x6b,
-	0x65, 0x79, 0x5f, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32,
-	0x0f, 0x2e, 0x63, 0x6f, 0x72, 0x65, 0x2e, 0x4b, 0x65, 0x79, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73,
-	0x52, 0x09, 0x6b, 0x65, 0x79, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x32, 0x54, 0x0a, 0x04, 0x43,
+	0x09, 0x52, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x22, 0x3c, 0x0a, 0x0a, 0x4e, 0x6f, 0x64,
+	0x65, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x16, 0x0a, 0x06, 0x70, 0x75, 0x62, 0x6b, 0x65,
+	0x79, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x70, 0x75, 0x62, 0x6b, 0x65, 0x79, 0x12,
+	0x16, 0x0a, 0x06, 0x61, 0x63, 0x74, 0x69, 0x76, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x08, 0x52,
+	0x06, 0x61, 0x63, 0x74, 0x69, 0x76, 0x65, 0x22, 0x4d, 0x0a, 0x0f, 0x4c, 0x69, 0x67, 0x68, 0x74,
+	0x6e, 0x69, 0x6e, 0x67, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x3a, 0x0a, 0x10, 0x6e, 0x6f,
+	0x64, 0x65, 0x5f, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x5f, 0x6c, 0x69, 0x73, 0x74, 0x18, 0x01,
+	0x20, 0x03, 0x28, 0x0b, 0x32, 0x10, 0x2e, 0x63, 0x6f, 0x72, 0x65, 0x2e, 0x4e, 0x6f, 0x64, 0x65,
+	0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x0e, 0x6e, 0x6f, 0x64, 0x65, 0x53, 0x74, 0x61, 0x74,
+	0x75, 0x73, 0x4c, 0x69, 0x73, 0x74, 0x22, 0x82, 0x01, 0x0a, 0x0e, 0x53, 0x74, 0x61, 0x74, 0x75,
+	0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x2e, 0x0a, 0x0a, 0x6b, 0x65, 0x79,
+	0x5f, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x0f, 0x2e,
+	0x63, 0x6f, 0x72, 0x65, 0x2e, 0x4b, 0x65, 0x79, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x09,
+	0x6b, 0x65, 0x79, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x40, 0x0a, 0x10, 0x6c, 0x69, 0x67,
+	0x68, 0x74, 0x6e, 0x69, 0x6e, 0x67, 0x5f, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x02, 0x20,
+	0x01, 0x28, 0x0b, 0x32, 0x15, 0x2e, 0x63, 0x6f, 0x72, 0x65, 0x2e, 0x4c, 0x69, 0x67, 0x68, 0x74,
+	0x6e, 0x69, 0x6e, 0x67, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x0f, 0x6c, 0x69, 0x67, 0x68,
+	0x74, 0x6e, 0x69, 0x6e, 0x67, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x32, 0x54, 0x0a, 0x04, 0x43,
 	0x6f, 0x72, 0x65, 0x12, 0x4c, 0x0a, 0x06, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x13, 0x2e,
 	0x63, 0x6f, 0x72, 0x65, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65,
 	0x73, 0x74, 0x1a, 0x14, 0x2e, 0x63, 0x6f, 0x72, 0x65, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73,
@@ -222,21 +345,25 @@ func file_proto_imp_api_core_core_proto_rawDescGZIP() []byte {
 	return file_proto_imp_api_core_core_proto_rawDescData
 }
 
-var file_proto_imp_api_core_core_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
+var file_proto_imp_api_core_core_proto_msgTypes = make([]protoimpl.MessageInfo, 5)
 var file_proto_imp_api_core_core_proto_goTypes = []interface{}{
-	(*StatusRequest)(nil),  // 0: core.StatusRequest
-	(*KeyStatus)(nil),      // 1: core.KeyStatus
-	(*StatusResponse)(nil), // 2: core.StatusResponse
+	(*StatusRequest)(nil),   // 0: core.StatusRequest
+	(*KeyStatus)(nil),       // 1: core.KeyStatus
+	(*NodeStatus)(nil),      // 2: core.NodeStatus
+	(*LightningStatus)(nil), // 3: core.LightningStatus
+	(*StatusResponse)(nil),  // 4: core.StatusResponse
 }
 var file_proto_imp_api_core_core_proto_depIdxs = []int32{
-	1, // 0: core.StatusResponse.key_status:type_name -> core.KeyStatus
-	0, // 1: core.Core.Status:input_type -> core.StatusRequest
-	2, // 2: core.Core.Status:output_type -> core.StatusResponse
-	2, // [2:3] is the sub-list for method output_type
-	1, // [1:2] is the sub-list for method input_type
-	1, // [1:1] is the sub-list for extension type_name
-	1, // [1:1] is the sub-list for extension extendee
-	0, // [0:1] is the sub-list for field type_name
+	2, // 0: core.LightningStatus.node_status_list:type_name -> core.NodeStatus
+	1, // 1: core.StatusResponse.key_status:type_name -> core.KeyStatus
+	3, // 2: core.StatusResponse.lightning_status:type_name -> core.LightningStatus
+	0, // 3: core.Core.Status:input_type -> core.StatusRequest
+	4, // 4: core.Core.Status:output_type -> core.StatusResponse
+	4, // [4:5] is the sub-list for method output_type
+	3, // [3:4] is the sub-list for method input_type
+	3, // [3:3] is the sub-list for extension type_name
+	3, // [3:3] is the sub-list for extension extendee
+	0, // [0:3] is the sub-list for field type_name
 }
 
 func init() { file_proto_imp_api_core_core_proto_init() }
@@ -270,6 +397,30 @@ func file_proto_imp_api_core_core_proto_init() {
 			}
 		}
 		file_proto_imp_api_core_core_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*NodeStatus); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_proto_imp_api_core_core_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*LightningStatus); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_proto_imp_api_core_core_proto_msgTypes[4].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*StatusResponse); i {
 			case 0:
 				return &v.state
@@ -288,7 +439,7 @@ func file_proto_imp_api_core_core_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_proto_imp_api_core_core_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   3,
+			NumMessages:   5,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
