# gen/js/proto/imp/api/core/core_pb.js
@@ -20,6 +20,8 @@ goog.object.extend(proto, google_api_annotations_pb);
 var protoc$gen$openapiv2_options_annotations_pb = require('../../../../protoc-gen-openapiv2/options/annotations_pb.js');
 goog.object.extend(proto, protoc$gen$openapiv2_options_annotations_pb);
 goog.exportSymbol('proto.core.KeyStatus', null, global);
+goog.exportSymbol('proto.core.LightningStatus', null, global);
+goog.exportSymbol('proto.core.NodeStatus', null, global);
 goog.exportSymbol('proto.core.StatusRequest', null, global);
 goog.exportSymbol('proto.core.StatusResponse', null, global);
 /**
@@ -63,6 +65,48 @@ if (goog.DEBUG && !COMPILED) {
    * @override
    */
   proto.core.KeyStatus.displayName = 'proto.core.KeyStatus';
+}
+/**
+ * Generated by JsPbCodeGenerator.
+ * @param {Array=} opt_data Optional initial data array, typically from a
+ * server response, or constructed directly in Javascript. The array is used
+ * in place and becomes part of the constructed object. It is not cloned.
+ * If no data is provided, the constructed object will be empty, but still
+ * valid.
+ * @extends {jspb.Message}
+ * @constructor
+ */
+proto.core.NodeStatus = function(opt_data) {
+  jspb.Message.initialize(this, opt_data, 0, -1, null, null);
+};
+goog.inherits(proto.core.NodeStatus, jspb.Message);
+if (goog.DEBUG && !COMPILED) {
+  /**
+   * @public
+   * @override
+   */
+  proto.core.NodeStatus.displayName = 'proto.core.NodeStatus';
+}
+/**
+ * Generated by JsPbCodeGenerator.
+ * @param {Array=} opt_data Optional initial data array, typically from a
+ * server response, or constructed directly in Javascript. The array is used
+ * in place and becomes part of the constructed object. It is not cloned.
+ * If no data is provided, the constructed object will be empty, but still
+ * valid.
+ * @extends {jspb.Message}
+ * @constructor
+ */
+proto.core.LightningStatus = function(opt_data) {
+  jspb.Message.initialize(this, opt_data, 0, -1, proto.core.LightningStatus.repeatedFields_, null);
+};
+goog.inherits(proto.core.LightningStatus, jspb.Message);
+if (goog.DEBUG && !COMPILED) {
+  /**
+   * @public
+   * @override
+   */
+  proto.core.LightningStatus.displayName = 'proto.core.LightningStatus';
 }
 /**
  * Generated by JsPbCodeGenerator.
@@ -332,6 +376,326 @@ if (jspb.Message.GENERATE_TO_OBJECT) {
  *     http://goto/soy-param-migration
  * @return {!Object}
  */
+proto.core.NodeStatus.prototype.toObject = function(opt_includeInstance) {
+  return proto.core.NodeStatus.toObject(opt_includeInstance, this);
+};
+
+
+/**
+ * Static version of the {@see toObject} method.
+ * @param {boolean|undefined} includeInstance Deprecated. Whether to include
+ *     the JSPB instance for transitional soy proto support:
+ *     http://goto/soy-param-migration
+ * @param {!proto.core.NodeStatus} msg The msg instance to transform.
+ * @return {!Object}
+ * @suppress {unusedLocalVariables} f is only used for nested messages
+ */
+proto.core.NodeStatus.toObject = function(includeInstance, msg) {
+  var f, obj = {
+    pubkey: jspb.Message.getFieldWithDefault(msg, 1, ""),
+    active: jspb.Message.getBooleanFieldWithDefault(msg, 2, false)
+  };
+
+  if (includeInstance) {
+    obj.$jspbMessageInstance = msg;
+  }
+  return obj;
+};
+}
+
+
+/**
+ * Deserializes binary data (in protobuf wire format).
+ * @param {jspb.ByteSource} bytes The bytes to deserialize.
+ * @return {!proto.core.NodeStatus}
+ */
+proto.core.NodeStatus.deserializeBinary = function(bytes) {
+  var reader = new jspb.BinaryReader(bytes);
+  var msg = new proto.core.NodeStatus;
+  return proto.core.NodeStatus.deserializeBinaryFromReader(msg, reader);
+};
+
+
+/**
+ * Deserializes binary data (in protobuf wire format) from the
+ * given reader into the given message object.
+ * @param {!proto.core.NodeStatus} msg The message object to deserialize into.
+ * @param {!jspb.BinaryReader} reader The BinaryReader to use.
+ * @return {!proto.core.NodeStatus}
+ */
+proto.core.NodeStatus.deserializeBinaryFromReader = function(msg, reader) {
+  while (reader.nextField()) {
+    if (reader.isEndGroup()) {
+      break;
+    }
+    var field = reader.getFieldNumber();
+    switch (field) {
+    case 1:
+      var value = /** @type {string} */ (reader.readString());
+      msg.setPubkey(value);
+      break;
+    case 2:
+      var value = /** @type {boolean} */ (reader.readBool());
+      msg.setActive(value);
+      break;
+    default:
+      reader.skipField();
+      break;
+    }
+  }
+  return msg;
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format).
+ * @return {!Uint8Array}
+ */
+proto.core.NodeStatus.prototype.serializeBinary = function() {
+  var writer = new jspb.BinaryWriter();
+  proto.core.NodeStatus.serializeBinaryToWriter(this, writer);
+  return writer.getResultBuffer();
+};
+
+
+/**
+ * Serializes the given message to binary data (in protobuf wire
+ * format), writing to the given BinaryWriter.
+ * @param {!proto.core.NodeStatus} message
+ * @param {!jspb.BinaryWriter} writer
+ * @suppress {unusedLocalVariables} f is only used for nested messages
+ */
+proto.core.NodeStatus.serializeBinaryToWriter = function(message, writer) {
+  var f = undefined;
+  f = message.getPubkey();
+  if (f.length > 0) {
+    writer.writeString(
+      1,
+      f
+    );
+  }
+  f = message.getActive();
+  if (f) {
+    writer.writeBool(
+      2,
+      f
+    );
+  }
+};
+
+
+/**
+ * optional string pubkey = 1;
+ * @return {string}
+ */
+proto.core.NodeStatus.prototype.getPubkey = function() {
+  return /** @type {string} */ (jspb.Message.getFieldWithDefault(this, 1, ""));
+};
+
+
+/**
+ * @param {string} value
+ * @return {!proto.core.NodeStatus} returns this
+ */
+proto.core.NodeStatus.prototype.setPubkey = function(value) {
+  return jspb.Message.setProto3StringField(this, 1, value);
+};
+
+
+/**
+ * optional bool active = 2;
+ * @return {boolean}
+ */
+proto.core.NodeStatus.prototype.getActive = function() {
+  return /** @type {boolean} */ (jspb.Message.getBooleanFieldWithDefault(this, 2, false));
+};
+
+
+/**
+ * @param {boolean} value
+ * @return {!proto.core.NodeStatus} returns this
+ */
+proto.core.NodeStatus.prototype.setActive = function(value) {
+  return jspb.Message.setProto3BooleanField(this, 2, value);
+};
+
+
+
+/**
+ * List of repeated fields within this message type.
+ * @private {!Array<number>}
+ * @const
+ */
+proto.core.LightningStatus.repeatedFields_ = [1];
+
+
+
+if (jspb.Message.GENERATE_TO_OBJECT) {
+/**
+ * Creates an object representation of this proto.
+ * Field names that are reserved in JavaScript and will be renamed to pb_name.
+ * Optional fields that are not set will be set to undefined.
+ * To access a reserved field use, foo.pb_<name>, eg, foo.pb_default.
+ * For the list of reserved names please see:
+ *     net/proto2/compiler/js/internal/generator.cc#kKeyword.
+ * @param {boolean=} opt_includeInstance Deprecated. whether to include the
+ *     JSPB instance for transitional soy proto support:
+ *     http://goto/soy-param-migration
+ * @return {!Object}
+ */
+proto.core.LightningStatus.prototype.toObject = function(opt_includeInstance) {
+  return proto.core.LightningStatus.toObject(opt_includeInstance, this);
+};
+
+
+/**
+ * Static version of the {@see toObject} method.
+ * @param {boolean|undefined} includeInstance Deprecated. Whether to include
+ *     the JSPB instance for transitional soy proto support:
+ *     http://goto/soy-param-migration
+ * @param {!proto.core.LightningStatus} msg The msg instance to transform.
+ * @return {!Object}
+ * @suppress {unusedLocalVariables} f is only used for nested messages
+ */
+proto.core.LightningStatus.toObject = function(includeInstance, msg) {
+  var f, obj = {
+    nodeStatusListList: jspb.Message.toObjectList(msg.getNodeStatusListList(),
+    proto.core.NodeStatus.toObject, includeInstance)
+  };
+
+  if (includeInstance) {
+    obj.$jspbMessageInstance = msg;
+  }
+  return obj;
+};
+}
+
+
+/**
+ * Deserializes binary data (in protobuf wire format).
+ * @param {jspb.ByteSource} bytes The bytes to deserialize.
+ * @return {!proto.core.LightningStatus}
+ */
+proto.core.LightningStatus.deserializeBinary = function(bytes) {
+  var reader = new jspb.BinaryReader(bytes);
+  var msg = new proto.core.LightningStatus;
+  return proto.core.LightningStatus.deserializeBinaryFromReader(msg, reader);
+};
+
+
+/**
+ * Deserializes binary data (in protobuf wire format) from the
+ * given reader into the given message object.
+ * @param {!proto.core.LightningStatus} msg The message object to deserialize into.
+ * @param {!jspb.BinaryReader} reader The BinaryReader to use.
+ * @return {!proto.core.LightningStatus}
+ */
+proto.core.LightningStatus.deserializeBinaryFromReader = function(msg, reader) {
+  while (reader.nextField()) {
+    if (reader.isEndGroup()) {
+      break;
+    }
+    var field = reader.getFieldNumber();
+    switch (field) {
+    case 1:
+      var value = new proto.core.NodeStatus;
+      reader.readMessage(value,proto.core.NodeStatus.deserializeBinaryFromReader);
+      msg.addNodeStatusList(value);
+      break;
+    default:
+      reader.skipField();
+      break;
+    }
+  }
+  return msg;
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format).
+ * @return {!Uint8Array}
+ */
+proto.core.LightningStatus.prototype.serializeBinary = function() {
+  var writer = new jspb.BinaryWriter();
+  proto.core.LightningStatus.serializeBinaryToWriter(this, writer);
+  return writer.getResultBuffer();
+};
+
+
+/**
+ * Serializes the given message to binary data (in protobuf wire
+ * format), writing to the given BinaryWriter.
+ * @param {!proto.core.LightningStatus} message
+ * @param {!jspb.BinaryWriter} writer
+ * @suppress {unusedLocalVariables} f is only used for nested messages
+ */
+proto.core.LightningStatus.serializeBinaryToWriter = function(message, writer) {
+  var f = undefined;
+  f = message.getNodeStatusListList();
+  if (f.length > 0) {
+    writer.writeRepeatedMessage(
+      1,
+      f,
+      proto.core.NodeStatus.serializeBinaryToWriter
+    );
+  }
+};
+
+
+/**
+ * repeated NodeStatus node_status_list = 1;
+ * @return {!Array<!proto.core.NodeStatus>}
+ */
+proto.core.LightningStatus.prototype.getNodeStatusListList = function() {
+  return /** @type{!Array<!proto.core.NodeStatus>} */ (
+    jspb.Message.getRepeatedWrapperField(this, proto.core.NodeStatus, 1));
+};
+
+
+/**
+ * @param {!Array<!proto.core.NodeStatus>} value
+ * @return {!proto.core.LightningStatus} returns this
+*/
+proto.core.LightningStatus.prototype.setNodeStatusListList = function(value) {
+  return jspb.Message.setRepeatedWrapperField(this, 1, value);
+};
+
+
+/**
+ * @param {!proto.core.NodeStatus=} opt_value
+ * @param {number=} opt_index
+ * @return {!proto.core.NodeStatus}
+ */
+proto.core.LightningStatus.prototype.addNodeStatusList = function(opt_value, opt_index) {
+  return jspb.Message.addToRepeatedWrapperField(this, 1, opt_value, proto.core.NodeStatus, opt_index);
+};
+
+
+/**
+ * Clears the list making it empty but non-null.
+ * @return {!proto.core.LightningStatus} returns this
+ */
+proto.core.LightningStatus.prototype.clearNodeStatusListList = function() {
+  return this.setNodeStatusListList([]);
+};
+
+
+
+
+
+if (jspb.Message.GENERATE_TO_OBJECT) {
+/**
+ * Creates an object representation of this proto.
+ * Field names that are reserved in JavaScript and will be renamed to pb_name.
+ * Optional fields that are not set will be set to undefined.
+ * To access a reserved field use, foo.pb_<name>, eg, foo.pb_default.
+ * For the list of reserved names please see:
+ *     net/proto2/compiler/js/internal/generator.cc#kKeyword.
+ * @param {boolean=} opt_includeInstance Deprecated. whether to include the
+ *     JSPB instance for transitional soy proto support:
+ *     http://goto/soy-param-migration
+ * @return {!Object}
+ */
 proto.core.StatusResponse.prototype.toObject = function(opt_includeInstance) {
   return proto.core.StatusResponse.toObject(opt_includeInstance, this);
 };
@@ -348,7 +712,8 @@ proto.core.StatusResponse.prototype.toObject = function(opt_includeInstance) {
  */
 proto.core.StatusResponse.toObject = function(includeInstance, msg) {
   var f, obj = {
-    keyStatus: (f = msg.getKeyStatus()) && proto.core.KeyStatus.toObject(includeInstance, f)
+    keyStatus: (f = msg.getKeyStatus()) && proto.core.KeyStatus.toObject(includeInstance, f),
+    lightningStatus: (f = msg.getLightningStatus()) && proto.core.LightningStatus.toObject(includeInstance, f)
   };
 
   if (includeInstance) {
@@ -390,6 +755,11 @@ proto.core.StatusResponse.deserializeBinaryFromReader = function(msg, reader) {
       reader.readMessage(value,proto.core.KeyStatus.deserializeBinaryFromReader);
       msg.setKeyStatus(value);
       break;
+    case 2:
+      var value = new proto.core.LightningStatus;
+      reader.readMessage(value,proto.core.LightningStatus.deserializeBinaryFromReader);
+      msg.setLightningStatus(value);
+      break;
     default:
       reader.skipField();
       break;
@@ -425,6 +795,14 @@ proto.core.StatusResponse.serializeBinaryToWriter = function(message, writer) {
       1,
       f,
       proto.core.KeyStatus.serializeBinaryToWriter
+    );
+  }
+  f = message.getLightningStatus();
+  if (f != null) {
+    writer.writeMessage(
+      2,
+      f,
+      proto.core.LightningStatus.serializeBinaryToWriter
     );
   }
 };
@@ -464,6 +842,43 @@ proto.core.StatusResponse.prototype.clearKeyStatus = function() {
  */
 proto.core.StatusResponse.prototype.hasKeyStatus = function() {
   return jspb.Message.getField(this, 1) != null;
+};
+
+
+/**
+ * optional LightningStatus lightning_status = 2;
+ * @return {?proto.core.LightningStatus}
+ */
+proto.core.StatusResponse.prototype.getLightningStatus = function() {
+  return /** @type{?proto.core.LightningStatus} */ (
+    jspb.Message.getWrapperField(this, proto.core.LightningStatus, 2));
+};
+
+
+/**
+ * @param {?proto.core.LightningStatus|undefined} value
+ * @return {!proto.core.StatusResponse} returns this
+*/
+proto.core.StatusResponse.prototype.setLightningStatus = function(value) {
+  return jspb.Message.setWrapperField(this, 2, value);
+};
+
+
+/**
+ * Clears the message field making it undefined.
+ * @return {!proto.core.StatusResponse} returns this
+ */
+proto.core.StatusResponse.prototype.clearLightningStatus = function() {
+  return this.setLightningStatus(undefined);
+};
+
+
+/**
+ * Returns whether this field is set.
+ * @return {boolean}
+ */
+proto.core.StatusResponse.prototype.hasLightningStatus = function() {
+  return jspb.Message.getField(this, 2) != null;
 };
 
 
