# server/core/core.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/imperviousai/imp-daemon/core"
 	core_proto "github.com/imperviousai/imp-daemon/gen/go/proto/imp/api/core"
+	"github.com/imperviousai/imp-daemon/lightning"
 	"go.uber.org/zap"
 )
 
@@ -24,16 +25,42 @@ func NewCoreServer(c core.Core) core_proto.CoreServer {
 func (m *coreServer) Status(ctx context.Context, req *core_proto.StatusRequest) (*core_proto.StatusResponse, error) {
 	zap.L().Info("[Server] Core Status")
 
-	status, err := m.core.KeyStatus()
+	// Check key status
+	keyStatus, err := m.core.KeyStatus()
 	if err != nil {
 		zap.L().Error("[Server] Status failed", zap.String("error", err.Error()))
 		return nil, err
 	}
 
+	// Check LN status
+	lightningStatus, err := m.core.CheckLightningStatus()
+	if err != nil {
+		zap.L().Error("[Server] Status failed", zap.String("error", err.Error()))
+		return nil, err
+	}
+
+	// TODO check relay status
+
 	zap.L().Info("[Server] Core Status success")
 	return &core_proto.StatusResponse{
 		KeyStatus: &core_proto.KeyStatus{
-			Status: status,
+			Status: keyStatus,
 		},
+		LightningStatus: lightningStatusToProto(lightningStatus),
+		// TODO relay status
 	}, nil
+}
+
+func lightningStatusToProto(nodeStatus []lightning.NodeStatus) *core_proto.LightningStatus {
+	nodeStatusProto := make([]*core_proto.NodeStatus, 0, len(nodeStatus))
+	for _, node := range nodeStatus {
+		nodeStatusProto = append(nodeStatusProto, &core_proto.NodeStatus{
+			Pubkey: node.Pubkey,
+			Active: node.Active,
+		})
+	}
+
+	return &core_proto.LightningStatus{
+		NodeStatusList: nodeStatusProto,
+	}
 }
